[gd_scene load_steps=27 format=3 uid="uid://cby55meunt1qo"]

[ext_resource type="Script" path="res://src/entities/enemies/skeleton/skeleton.gd" id="1_icnjc"]
[ext_resource type="AudioStream" uid="uid://c3oca2yo6i0es" path="res://assets/sound/sfx/enemies/21_orc_damage_3.wav" id="2_igvac"]
[ext_resource type="PackedScene" uid="uid://xsalxs0jjtgk" path="res://src/game/ui/HealthBar.tscn" id="3_wodey"]
[ext_resource type="Script" path="res://src/entities/enemies/skeleton/states/SkeletonStateMachine.gd" id="4_celya"]
[ext_resource type="Script" path="res://src/entities/enemies/skeleton/states/SkeletonIdleState.gd" id="5_ltluq"]
[ext_resource type="Script" path="res://src/entities/enemies/skeleton/states/SkeletonWalkState.gd" id="6_xnypc"]
[ext_resource type="Script" path="res://src/entities/enemies/skeleton/states/SkeletonAttackState.gd" id="7_qewuu"]
[ext_resource type="Script" path="res://src/entities/enemies/skeleton/states/SkeletonDeadState.gd" id="8_e7jh8"]
[ext_resource type="AudioStream" uid="uid://cvwy238cwx648" path="res://assets/sound/sfx/enemies/20_orc_special_atk.wav" id="9_pxlu1"]
[ext_resource type="AudioStream" uid="uid://khada24ye24v" path="res://assets/sound/sfx/enemies/24_orc_death_spin.wav" id="10_em4j1"]
[ext_resource type="AudioStream" uid="uid://cpgjgpqlx80ji" path="res://assets/sound/sfx/enemies/skeleton_alert.mp3" id="11_s6npy"]
[ext_resource type="AudioStream" uid="uid://ywpbgjt30g3s" path="res://assets/sound/sfx/movement/16_human_walk_stone_2.wav" id="11_ygu08"]
[ext_resource type="Texture2D" uid="uid://bkcryy6fx25c8" path="res://assets/textures/enemies/skeleton/Skeleton.png" id="12_cpmga"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xxxip"]
radius = 10.4384
height = 36.6934

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.22392e-06, -7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_layer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyCollision:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BodyPivot/AttackArea:collision_mask")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BodyPivot/Body:frame_coords")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 5)]
}

[sub_resource type="Animation" id="Animation_bv3sv"]
resource_name = "attack"
length = 2.55
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1, 2.25, 2.4, 2.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.05, 2.55),
"transitions": PackedFloat32Array(8.28212, 2.05674, 1),
"update": 0,
"values": [Vector2(-2, 0), Vector2(8, 0), Vector2(-2, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/AttackArea:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(1e-05, 1.02837, 1),
"update": 1,
"values": [0, 2, 0]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySfx")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_pxlu1")
}],
"times": PackedFloat32Array(1.05)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyPivot/AttackArea/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 1.05, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(9, -26), Vector2(9, -26), Vector2(26, -20), Vector2(39, -11), Vector2(45, 20)]
}

[sub_resource type="Animation" id="8"]
resource_name = "die"
length = 1.8
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HealthBar")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodySfx")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_em4j1")
}],
"times": PackedFloat32Array(0.285714)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="Animation_x4fuj"]
resource_name = "hit"
length = 1.05
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2)]
}

[sub_resource type="Animation" id="4"]
resource_name = "idle"
length = 1.2
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [54, 55, 56, 57, 58, 59, 60, 61, 62]
}

[sub_resource type="Animation" id="Animation_mvahf"]
resource_name = "react"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_s6npy")
}],
"times": PackedFloat32Array(0.142857)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_wasv5"]
resource_name = "walk"
length = 1.95
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5), Vector2i(6, 5), Vector2i(7, 5), Vector2i(8, 5), Vector2i(9, 5), Vector2i(10, 5), Vector2i(11, 5), Vector2i(12, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.50529,
"start_offset": 0.0,
"stream": ExtResource("11_ygu08")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_ygu08")
}],
"times": PackedFloat32Array(0.75, 1.8)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iidtu"]
_data = {
"RESET": SubResource("3"),
"attack": SubResource("Animation_bv3sv"),
"die": SubResource("8"),
"hit": SubResource("Animation_x4fuj"),
"idle": SubResource("4"),
"react": SubResource("Animation_mvahf"),
"walk": SubResource("Animation_wasv5")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_e6uum"]
atlas = ExtResource("12_cpmga")
region = Rect2(0, 0, 774, 222)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nx21u"]
radius = 1.50253
height = 18.4377

[sub_resource type="CircleShape2D" id="CircleShape2D_686m0"]
radius = 427.001

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u3rn4"]
radius = 15.0
height = 44.0

[node name="Skeleton" type="CharacterBody2D"]
light_mask = 4
visibility_layer = 4
position = Vector2(0, -22)
collision_layer = 4
collision_mask = 7
script = ExtResource("1_icnjc")
hit_sfx = ExtResource("2_igvac")

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_wodey")]
offset_left = -21.0
offset_top = -37.0
offset_bottom = -32.0
player = NodePath("..")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2, 0)
scale = Vector2(1.0538, 1.19912)
shape = SubResource("CapsuleShape2D_xxxip")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_celya")
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = Array[NodePath]([NodePath("Idle"), NodePath("Walk"), NodePath("Attack"), NodePath("Dead")])

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_ltluq")
state_id = "idle"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("6_xnypc")
state_id = "walk"

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("7_qewuu")
state_id = "attack"

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("8_e7jh8")
state_id = "dead"

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iidtu")
}

[node name="FloorRaycasts" type="Node2D" parent="."]

[node name="RightFloorCast" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2(9, 21)
target_position = Vector2(0, 100)

[node name="RightFloorCast2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2(9, 21)
target_position = Vector2(0, 100)
collision_mask = 16

[node name="LeftFloorCast" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2(-13, 21)
target_position = Vector2(0, 100)

[node name="LeftFloorCast2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2(-13, 21)
target_position = Vector2(0, 100)
collision_mask = 16

[node name="BodyPivot" type="Node2D" parent="."]
position = Vector2(-1.22392e-06, -7)

[node name="Body" type="Sprite2D" parent="BodyPivot"]
position = Vector2(18, -4)
scale = Vector2(1.781, 1.783)
texture = SubResource("AtlasTexture_e6uum")
hframes = 18
vframes = 6

[node name="AttackArea" type="Area2D" parent="BodyPivot"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyPivot/AttackArea"]
position = Vector2(45, 20)
rotation = 0.849975
shape = SubResource("CapsuleShape2D_nx21u")

[node name="Eyes" type="RayCast2D" parent="."]
enabled = false
collision_mask = 3

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_686m0")

[node name="BodySfx" type="AudioStreamPlayer2D" parent="."]
max_distance = 400.0
attenuation = 1.51572
bus = &"EnemySFX"

[node name="CollidingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollidingArea"]
shape = SubResource("CapsuleShape2D_u3rn4")

[node name="DamageSpawn" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -25)

[connection signal="hit" from="." to="StateMachine" method="notify_hit"]
[connection signal="hp_changed" from="." to="HealthBar" method="update"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="animation_finished" from="BodyAnimations" to="StateMachine" method="_on_body_animations_animation_finished"]
[connection signal="area_entered" from="BodyPivot/AttackArea" to="." method="_on_sword_area_body_entered"]
[connection signal="body_entered" from="BodyPivot/AttackArea" to="." method="_on_sword_area_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="StateMachine" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="StateMachine" method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="CollidingArea" to="." method="_on_collision"]
